# aura-stay-dashboard

./: .eslintrc.json  .gitignore  .npmrc  .vercel-deploy  .vercelignore  .zshrc_fix  Anchor.toml  CHANGELOG.md  COMPREHENSIVE-FEATURE-PLAN.md  COMPREHENSIVE-IMPROVEMENTS.md  DEPLOYMENT-SOLUTION.md  Dockerfile  ENVIRONMENT_SETUP.md  FUNCTION_TEST_REPORT.md  LICENSE  MANUAL_TESTING_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION-READY-CHECKLIST.md  README.md  TESTING_SUMMARY.md  TREASURY_IMPLEMENTATION.md  VERCEL-DEPLOYMENT-FIX.md  VERCELDEPLOYMENT-FIXES.md  WEEK-2-IMPLEMENTATION-SUMMARY.md  check_wallet.ps1  dev-authority.json  docker-compose.yml  env.example  env.production.example  eslint.config.mjs  image-helper.html  index.html  instrumentation.js  jest.config.js  jest.setup.js  next.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  (+7 more)
docs/: API_SETUP.md  CLEANUP-SUMMARY.md  CODEBASE_CLEANUP_PLAN.md  DATABASE_SETUP.md  DYNAMIC-DATA-AUDIT-REPORT.md  FIREBASE-TO-PRISMA-VERIFICATION.md  GOOGLE_SHEETS_SETUP.md  IMPLEMENTATION-SUMMARY.md  MIGRATION-AUDIT-COMPLETE.md  MIGRATION-COMPLETE-FINAL.md  MIGRATION-COMPLETE.md  MIGRATION-FINAL-CORRECT.md  MIGRATION-PLAN.md  MIGRATION-RESTORED-COMPLETE.md  PRODUCTION-DEPLOYMENT.md  PROJECT_OVERVIEW.md  README-nextjs.md  README.md  STYLING_RESTORATION_NOTES.md  TECHNICAL-README.md  WALLET_ADAPTER_INTEGRATION.md  migration.md
prisma/: schema.prisma  seed-admin.ts
programs/aura-burn-redistribution/: Cargo.toml
programs/aura-burn-redistribution/src/: lib.rs
programs/aura-multisig/: Cargo.toml
programs/aura-multisig/src/: lib.rs
programs/time-weighted-staking/: Cargo.toml  staking.test.ts
programs/time-weighted-staking/src/: lib.rs
public/: manifest.json  polyfills.js  (+1 more)
(+369 files in other folders)
