[package]
name = "aura-burn-redistribution"
version = "0.1.0"
description = "AuraBNB 2% burn and redistribution smart contract"
edition = "2021"
license = "MIT"
repository = "https://github.com/aurabnb/aura-stay-dashboard"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_burn_redistribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"

[dev-dependencies]
anchor-client = "0.30.1"
solana-sdk = "~1.18.0"
tokio = { version = "1.0", features = ["macros"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 