[package]
name = "aura-multisig"
version = "0.1.0"
description = "AuraBNB Multisig Wallet Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_multisig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0" 